lab 4/k8s_v1/cinemaservice/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cinema-service
spec:
  type: ClusterIP      
  ports:
    - port: 80                  # порт по якому можна звератись до сервісу
      targetPort: 8080          # порт контейнера
  selector:
    app: cinema-service          # селектор, всі Pod з даним селектором, будуть підключені до даного сервісу
