lab 4/k8s_v1/cinemaservice/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cinema-service-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - http:
        paths:
          - path: /api
            pathType: "Prefix"
            backend:
              service:
                name: cinema-service
                port:
                  number: 80
